syntax = "proto3";

package ai.metathings.service.identityd2;

import "validate/validate.proto";

import "model.proto";

message GetRoleRequest {
	OpRole role = 1 [(validate.rules).message.required = true];
}

message GetRoleResponse {
	Role role = 1;
}
